Added apache commons validator dependency, only reconstruct URL if not already valid